--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
         <section class="card">
             <h2>Bienvenido</h2>
             <p>Esta es una pagina para mostrar un ejemplo de html + css</p>
+            <a class="btn" href="#">Saber mas</a>
+        </section>
+        <section class="card">
+            <h2>Contacto</h2>
+            <p>Aqui se coloca informacion de contacto</p>
         </section>
     </main>
+    <footer class="site-footer">
+        <p>Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
